opam-version: "1.2"
name: "bson"
version: "0.89.3"
maintainer: "Marc Simon <marc.simon42@gmail.com> <twitter.com/marcsimon42>"
authors: [ "Marc Simon <marc.simon42@gmail.com> <twitter.com/marcsimon42>"
           "Dr. Xinuo Chen <iamindcs@gmail.com>" ]
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
depends: [
  "dune" {build}
]
depopts: [
  "deriving"
]
